# api_key_dispenser

./: make_tables.sql  make_testdata.sql
src/: Makefile.am  announce_service.cc  base64.h  cgi_helper.cc  cgi_helper.h  configure.ac  curl_client.h  login_mapper.cc  login_service.cc  make_apikey.cc  make_servicekey.cc  osm_permissions_reader.h  postgresql_wrapper.cc  postgresql_wrapper.h  renew_apikey.cc  retrieve_keys.cc  revoke_apikey.cc  revoke_servicekey.cc
src/api_calls/: announce_service.cc  make_apikey.cc  make_servicekey.cc  renew_apikey.cc  retrieve_keys.cc  revoke_apikey.cc  revoke_servicekey.cc
src/html/: login_mapper.js  login_service.js  mapper.html  service.html
src/pages/: login_mapper.cc  login_service.cc
src/sql/: init.sh  make_tables.sql  make_testdata.sql  make_testsessions.sql
src/tools/: base64.cc  curl_client.cc  osm_permissions_reader.cc  postgresql_wrapper.h  random_key.cc  random_key.h
